--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pyrogram
-tgcrypto
+TgCrypto
+ffmpeg-python
+git+https://github.com/pyrogram/pyrogram@master
+pytgcalls==3.0.0.dev19
 aiohttp==3.6.2
 google_trans_new
 pymongo
