--- a/app.json
+++ b/app.json
@@ -33,6 +33,7 @@
     },
     "BOT_LIST":{
       "description": "List id of bot for trigger autoprotecc, separate by space.",
+      "required": true,
       "value": "792028928 1232515770 1964681186"
     },
     "LOG_CHAT": {
