--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 TgCrypto
 ffmpeg-python
 git+https://github.com/pyrogram/pyrogram@master
-pytgcalls==3.0.0.dev19
+pyrogram
+pytgcalls==3.0.0.dev10
 aiohttp==3.6.2
 google_trans_new
 pymongo
